@@ -18,6 +18,5 @@ WNODE *fold_wind(BYTE *path);
 WORD d_errmsg(void);
 WORD d_doop(WORD level, WORD op, BYTE *psrc_path, BYTE *pdst_path,
             LONG tree, WORD *pfcnt, WORD *pdcnt);
-WORD source_is_parent(BYTE *psrc_path, FNODE *pflist, BYTE *pdst_path);
 WORD dir_op(WORD op, BYTE *psrc_path, FNODE *pflist, BYTE *pdst_path,
             WORD *pfcnt, WORD *pdcnt, LONG *psize);
